--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -39,20 +39,31 @@
 }
 
 .header {
-    display: inline-flex;
-    border-bottom: 2px solid rgb(160, 144, 151, 0.4);
-    margin-bottom: 50px;
     width: 100%;
-    height: 70px;
+    height: 75px;
+    max-width: 1280px;
+    margin: 0 auto 50px;
+    position: sticky;
 }
 
 #header-logo {
-    padding: 3% 5%;
+    margin: auto;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
 }
 
 .header-logo-container {
-    margin: 0 auto;
+    margin: auto;
     display: inline-block;
+    width: 100%;
+    height: auto;
+}
+
+.header-logo-container:hover {
+    background-color: transparent;
 }
 
 .header__link-container {
@@ -73,6 +84,14 @@
     -webkit-text-stroke-color: #000;
     cursor: pointer;
     line-height: 70px;
+}
+
+.header__link:last-of-type {
+    padding: 0;
+}
+
+.header__link:last-of-type a {
+    padding-right: 0;
 }
 
 .header__link svg {
@@ -108,6 +127,10 @@
     overflow: hidden;
 }
 
+.home-item__image img {
+    height: 30vw !important;
+}
+
 .home-item__title {
     margin-top: 10px;
     margin-bottom: 5px;
@@ -123,4 +146,19 @@
     font-size: 11px;
     letter-spacing: 2px;
     text-align: center;
+}
+
+a.gatsby-resp-image-link {
+    color: #ffffff;
+    background-color: transparent;
+}
+
+@media (min-width: 1280px) {
+    .header {
+        width: 75%;
+    }
+
+    .header__link-container {
+        right: 0px;
+    }
 }
