--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -225,6 +225,7 @@ body {
     letter-spacing: 2px;
     text-align: center;
     margin-top: 10px;
+    font-variant: all-petite-caps;
 }
 
 .home-item__date {
@@ -234,6 +235,7 @@ body {
     line-height: 20px;
     letter-spacing: 2px;
     text-align: center;
+    font-style: italic;
 }
 
 a.gatsby-resp-image-link,
