--- a/src/pages/recipePage.css
+++ b/src/pages/recipePage.css
@@ -1,10 +1,11 @@
-.recipes__container {
+.recipe-page__container {
 
 }
-.recipe {
+.recipe-page {
     margin: 10px 0 40px;
 }
-.recipe__category {
+
+.recipe-page__category {
     text-transform: uppercase;
     color: #a09097;
     font-size: 12px;
@@ -12,7 +13,8 @@
     letter-spacing: 2px;
     margin-top: 10px;
 }
-.recipe__title {
+
+.recipe-page__title {
     margin-top: 10px;
     margin-bottom: 5px;
     font-size: 22px;
@@ -20,6 +22,6 @@
     color: #000;
 }
 
-.recipe__title a {
+.recipe-page__title a {
     color: #000;
 }
