--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -28,7 +28,7 @@ body {
 .layout-container {
     margin: 0 auto;
     width: 100%;
-    padding: 0 20px 100px;
+    padding: 0 30px 100px;
 }
 
 .blog-html ul {
@@ -291,14 +291,6 @@ footer {
 }
 
 @media (min-width: 767px) {
-    .layout-container {
-        margin: 0 auto;
-        width: 70%;
-        max-width: 1280px;
-        padding: 0;
-        min-height: calc(100vh - 245px);
-    }
-
     .header {
         max-width: 1280px;
         width: 70%;
@@ -372,5 +364,21 @@ footer {
 
     .footer__navigation {
         display: inline-block;
+    }
+}
+
+@media (min-width: 850px) {
+    .layout-container {
+        margin: 0 auto;
+        width: 70%;
+        max-width: 1280px;
+        padding: 0;
+        min-height: calc(100vh - 245px);
+    }
+}
+
+@media (max-width: 450px) {
+    .layout-container {
+        padding: 0 20px 100px;
     }
 }
